<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_window_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context="com.aclass.android.qq.RegisterWindowActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_register"
        tools:ignore="ContentDescription"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="450dp"
        android:layout_marginTop="125dp" />
    <EditText
        android:id="@+id/num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/qq"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="200dp"
        />
    <EditText
        android:id="@+id/pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/pwd"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="250dp"
        />
    <EditText
        android:id="@+id/again_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/againPwd"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp" />
    <EditText
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp" />





    <TextView
        android:id="@+id/textView"
        android:hint="@string/sex"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="text"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintBottom_toTopOf="@+id/register"

        app:layout_constraintVertical_bias="0.46"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toLeftOf="@+id/nickname" />


    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/shape"
        android:text="@string/register1"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp" />

    <RadioGroup
        android:id="@+id/sexRadioGroup"
    android:layout_width="201dp"
    android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginRight="16dp"
    android:layout_marginStart="14dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="14dp"
    android:orientation="horizontal"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        android:layout_marginBottom="56dp">

        <RadioButton
            android:id="@+id/male"
            android:hint="@string/sex1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"


            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
             />

        <RadioButton
            android:id="@+id/female"
            android:hint="@string/sex2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBaseline_creator="1"
            android:layout_weight="0.5" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
