<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_window_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    tools:context="com.aclass.android.qq.LoginWindowActivity">


    <EditText
        android:id="@+id/account_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/qq"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="280dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/pwd_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pwd"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="340dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/logining"
        android:textColor="#ffffff"
        android:background="@android:color/transparent"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:text="@string/register1"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:typeface="normal"
       android:layout_marginRight="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="72dp"
        tools:layout_constraintRight_creator="1"

        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="195dp"
        app:layout_constraintGuide_percent="0.5078125" />


</android.support.constraint.ConstraintLayout>
